# cmake-course

./: .gitignore  CMakeLists.txt  README.md
CMAKE_CXX_COMPILER_ID-demo/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch02_CommonFunction/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch02_CommonFunction/0202_CommentAndMessage/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch02_CommonFunction/0204_AdvanceMessageLog/: CMakeLists.txt  main.cpp
CmakeBuildsLargeC++Projects/practices/ch02_CommonFunction/0205_FindModelAndDisplayIndent/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch02_CommonFunction/0206_VariableDemo/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch02_CommonFunction/0207_MessageColor/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch02_CommonFunction/0208_CmakeVarAndTranCPPVarDemo/: CMakeLists.txt  xlog.cpp  xlog.h
CmakeBuildsLargeC++Projects/practices/ch02_CommonFunction/0209_IncludeAnalysisDemo/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch02_CommonFunction/0210_AutoLoadSourceFile/: CMakeLists.txt  main.cpp
CmakeBuildsLargeC++Projects/practices/ch02_CommonFunction/0214_SetOutputPath/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch02_CommonFunction/0215_add_subdirectory/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch03_PrimaryGrammar/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch03_PrimaryGrammar/0302_if_cost/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch03_PrimaryGrammar/0303_if_variable_string/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch03_PrimaryGrammar/0304_if_logical/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch03_PrimaryGrammar/0305_if_regex/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch03_PrimaryGrammar/0306_cache/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch03_PrimaryGrammar/0307_variableAndCache/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch03_PrimaryGrammar/0308_GuiAndCache/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch03_PrimaryGrammar/0309_option/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch03_PrimaryGrammar/0310_OverridePolicy/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch03_PrimaryGrammar/0311_PassCache/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch03_PrimaryGrammar/0313_SetAndGetProperty/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch04_GenExprAndFileOperation/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch05_CrossPlatform/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch06_Install/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch08_UnitTest/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch09_ActualProject/: CMakeLists.txt
CmakeBuildsLargeC++Projects/practices/ch10_SupplementaryChapter/: CMakeLists.txt
Supplementary-practice/AUTOUIC_SEARCH_PATHS_demo/: CMakeLists.txt
Supplementary-practice/cmake_language/demo1/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp
Supplementary-practice/cmake_language/demo2/: CMakeLists.txt
Supplementary-practice/coverage/untitled1/: CMakeLists.txt
cmake-best-practice/cmake-code-example/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch05-CMake-demo/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch09-demo/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch12-project/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch13-variable/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch14-list/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch15-cache/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch16-property/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch17-if judge/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch18-while/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch19-foreach/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch20-define-function/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch21-macro-and-func/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch22-scope-of-variable/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch24-policy/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch25-build-type/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch26-CMakePresets/: CMakeLists.txt  CMakePresets.json
cmake-best-practice/cmake-code-example/ch34-vscode-project/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch36_manage_executable_target/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch37_manage_library_target/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch38_library_visibility/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch41_manage_compiler_linker/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch42_install/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch43_install_export/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch44_cpack/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch45_find_file_path/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch46_find_program_library/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch47_find_package/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch51_thirdparty/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch52_add_custom_target/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch53_add_custom_command/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch54_add_custom_command_generate_file/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch55_execute_process/: CMakeLists.txt  main.cpp  version.h.in
cmake-best-practice/cmake-code-example/ch56_configure_file/: CMakeLists.txt  version.h.in
cmake-best-practice/cmake-code-example/ch59_cmake_presets/: CMakeLists.txt  CMakePresets.json
cmake-best-practice/cmake-code-example/ch64_ctest/: CMakeLists.txt
cmake-best-practice/cmake-code-example/ch65_CodeScanningTools/: CMakeLists.txt
(+310 files in other folders)
