cmake_minimum_required(VERSION 3.23)
project(cmake-code-example
        VERSION 1.22.333
        DESCRIPTION "cmake study project"
        HOMEPAGE_URL "eglinux.com"
        LANGUAGES CXX C)
list(APPEND CMAKE_MESSAGE_CONTEXT TOP)
#add_subdirectory(ch05-CMakeRelated-demo)
#add_subdirectory(ch09-demo)
add_subdirectory(ch12-project)
#add_subdirectory(ch13-variable)
#add_subdirectory(ch14-list)
#add_subdirectory(ch15-cache)
#add_subdirectory(ch16-property)
#add_subdirectory("ch17-if judge")
#add_subdirectory("ch18-while")
#add_subdirectory("ch19-foreach")
#add_subdirectory(ch20-define-function)
#add_subdirectory(ch21-macro-and-func)
#add_subdirectory(ch22-scope-of-variable)
#add_subdirectory(ch24-policy)
#add_subdirectory(ch25-build-type)
#add_subdirectory(ch26-CMakePresets)
#add_subdirectory(ch34-vscode-project)
#add_subdirectory(ch36_manage_executable_target)
#add_subdirectory(ch37_manage_library_target)
#add_subdirectory(ch38_library_visibility)
#add_subdirectory(ch40_use_library)
#add_subdirectory(ch41_manage_compiler_linker)
#add_subdirectory(ch42_install)
#add_subdirectory(ch43_install_export)
#add_subdirectory(ch44_cpack)
#add_subdirectory(ch45_find_file_path)
#add_subdirectory(ch46_find_program_library)
#add_subdirectory(ch47_find_package)
#add_subdirectory(ch51_thirdparty)
#add_subdirectory(ch52_add_custom_target)
#add_subdirectory(ch53_add_custom_command)
#add_subdirectory(ch54_add_custom_command_generate_file)
#add_subdirectory(ch55_execute_process)
#add_subdirectory(ch56_configure_file)
#add_subdirectory(ch59_cmake_presets)
add_subdirectory(ch64_ctest)
#add_subdirectory(ch65_CodeScanningTools)
