if ("${CMAKE_MINIMUM_REQUIRED_VERSION}" STREQUAL "")
    cmake_minimum_required(VERSION 3.25)
endif ()
project(ch02_CommonFunction)

#add_subdirectory(0202_CommentAndMessage)
#add_subdirectory(0204_AdvanceMessageLog)
#add_subdirectory(0205_FindModelAndDisplayIndent)
#add_subdirectory(0206_VariableDemo)
#add_subdirectory(0207_MessageColor)
#add_subdirectory(0208_CmakeVarAndTranCPPVarDemo)
#add_subdirectory(0209_IncludeAnalysisDemo)
#add_subdirectory(0210_AutoLoadSourceFile)
#add_subdirectory(0214_SetOutputPath)
#add_subdirectory(0215_add_subdirectory)