if ("${CMAKE_MINIMUM_REQUIRED_VERSION}" STREQUAL "")
    cmake_minimum_required(VERSION 3.25)
endif ()
project(ch04_GenExprAndFileOperation)

#add_subdirectory(0402_expr_condition_logic)
add_subdirectory(0403_expr_debuging)
#add_subdirectory(0404_expr_string_condition)
add_subdirectory(0405_expr_target)


