if ("${CMAKE_MINIMUM_REQUIRED_VERSION}" STREQUAL "")
    cmake_minimum_required(VERSION 3.25)
endif ()
project(ch05_CrossPlatform)

#add_subdirectory(0503_PUBLIC_INTERFACE)
#add_subdirectory(0504_target_link_libraries)
#add_subdirectory(0505_target_compile_definitions)
#add_subdirectory(0506_target_compile_features)
#add_subdirectory(0507_compile_link_object_file)
#add_subdirectory(0508_so_gen_ver_link)
#add_subdirectory(0510_linux_debug_release)
#add_subdirectory(0511_windows_debug_release)
#add_subdirectory(0512_debug_release_output)
#add_subdirectory(0513_vs_pdb)
#add_subdirectory(0514_vs_debug_release)
#add_subdirectory(0515_MD_MTD)
#add_subdirectory(0516_source_group)













