if ("${CMAKE_MINIMUM_REQUIRED_VERSION}" STREQUAL "")
    cmake_minimum_required(VERSION 3.25)
endif ()
project(ch09_ActualProject)

add_subdirectory(0903_definitions)
add_subdirectory(0904_debug_release)
add_subdirectory(0905_install_find_package)
add_subdirectory(0906_config_dynamic)
add_subdirectory(0907_refactor_cmake_pool)
add_subdirectory(0908_test_xlog_linux)
add_subdirectory(0909_text_xlog_config_vs_staticlib)
add_subdirectory(0910_xthread_pool)
add_subdirectory(0911_cmake_dependency)
add_subdirectory(0912_xlog_xthread_pool_unit_test)

