cmake_minimum_required(VERSION 3.23 FATAL_ERROR)

project(ch42_install
    VERSION 0.0.1
    DESCRIPTION "A collection of sample C++ applications and libraries to demonstrate creating libraries and executables"
    LANGUAGES CXX
)
#add_subdirectory(ex01_executbale)
#add_subdirectory(ex02_static)
#add_subdirectory(ex03_file)
add_subdirectory(ex04_directory)
